<resources>
    <string name="app_name">Servicios Pingon</string>
    <string name="title_activity_tabbed">Servicios Pingon</string>
    <string name="app_title">Servicios Pingon</string>
    <string name="facebookTv">Facebook</string>
    <string name="linkedinTv">LinkedIn</string>
    <string name="webpageTv">www.pingon.cl</string>
    <string name="equipmentTv">Equipos</string>
    <string name="contactTv">Contacto</string>
    <string name="applyTv">Postula Aquí</string>
    <string name="towercraneIb">Grúas Torre</string>
    <string name="platformIb">Plataformas</string>
    <string name="forkliftIb">Montacargas</string>
    <string name="elevatorIb">Elevadores</string>
    <string name="nameEt">Nombre</string>
    <string name="phoneEt">Teléfono</string>
    <string name="mailEt">Correo Electrónico</string>
    <string name="interestareaEt">Área de Interés</string>
    <string name="sendBt">Enviar</string>
    <string name="towercraneText">En Pingon contamos con 6 modelos de grúas torre.</string>
    <string name="platformText">En Pingon contamos con mono mastiles y bi mastiles.</string>
    <string name="forkliftText">En Pingon contamos con 3 modelos de montacargas.</string>
    <string name="elevatorText">En Pingon contamos con 2 modelos de elevadores.</string>
    <string name="operatorsRb">Operadores</string>
    <string name="administrationRb">Administración</string>
    <string name="operationsRb">Operaciones</string>
    <string name="electromechanicRb">Electromecánica</string>
    <string name="title_activity_tower_cranes">Grúas\nTorre</string>
    <string name="title_activity_platforms">Plata\nforma</string>
    <string name="title_activity_forklift">Monta\ncarga</string>
    <string name="title_activity_elevator">Eleva\ndores</string>
    <string name="gp4010">Largo pluma: 40 metros\n Carga en punta: 1,0 ton</string>
    <string name="gp4511">Largo pluma: 45 metros\n Carga en punta: 1,1 ton</string>
    <string name="gp5113">Largo pluma: 51 metros\n Carga en punta: 1,3 ton</string>
    <string name="gp5425">Largo pluma: 54 metros\n Carga en punta: 2,5 ton</string>
    <string name="pt56312">Largo pluma: 63 metros\n Carga en punta: 1,2 ton</string>
    <string name="quoteBtn">COTIZAR EQUIPO</string>

</resources>
