<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ApplyFragment"
    android:orientation="vertical">

    <EditText
        android:fontFamily="@font/vegur_bold"
        android:id="@+id/nameEt"
        android:hint="@string/nameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:fontFamily="@font/vegur_bold"
        android:id="@+id/phoneEt"
        android:hint="@string/phoneEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:fontFamily="@font/vegur_bold"
        android:id="@+id/mailEt"
        android:hint="@string/mailEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/interestareaEt"
        android:fontFamily="@font/vegur_bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/interestareaEt"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/interestareaRg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:paddingLeft="20dp">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Administración"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Operadores"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Electromecanica"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Operaciones"/>

    </RadioGroup>

    <Button
        android:fontFamily="@font/vegur_bold"
        android:id="@+id/sendBt"
        android:text="@string/sendBt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>