<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TowerCraneFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/towerCraneIv"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:alpha="0.9"
                android:scaleType="centerCrop"
                android:src="@mipmap/background_tower_cranes" />

            <TextView
                android:id="@+id/towerCraneTitleTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/blackcolorTransparent"
                android:fontFamily="@font/vegur_bold"
                android:padding="8dp"
                android:text="@string/towercraneIb"
                android:textColor="@color/textcolorLight"
                android:textSize="35sp" />

        </FrameLayout>

        <EditText
            android:id="@+id/nameInputEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/vegur_bold"
            android:hint="Ingrese su nombre"
            android:inputType="textPersonName"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/mailInputEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/vegur_bold"
            android:hint="Ingrese su correo"
            android:inputType="textEmailAddress"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/towerCraneRgTitleTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/vegur_bold"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:text="Seleccione el modelo"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/towerCraneRg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/vegur_bold"
            android:paddingEnd="16dp"
            android:paddingStart="16dp">

            <RadioButton
                android:id="@+id/gp4010Rb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/vegur_bold"
                android:tag="@string/gp4010"
                android:text="GP 40.10"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/gp4511Rb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/vegur_bold"
                android:tag="@string/gp4511"
                android:text="GP 45.11"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/gp5113Rb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/vegur_bold"
                android:tag="@string/gp5113"
                android:text="GP 51.13"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/gp5425Rb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/vegur_bold"
                android:tag="@string/gp5425"
                android:text="GP 54.25"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/pt56312Rb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/vegur_bold"
                android:tag="@string/pt56312"
                android:text="PT 563.12"
                android:textSize="14sp" />

        </RadioGroup>

        <Button
            android:id="@+id/towerCraneQuoteBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/vegur_bold"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:text="@string/quoteBtn"
            android:textSize="18sp" />

    </LinearLayout>


</ScrollView>